# libpypostal

./: .gitignore  LICENSE  MANIFEST.IN  README.md  install_libpostal.sh  pyproject.toml  setup.py
.github/workflows/: deploy-test.yml  deploy.yml  wheels.yml
libpypostal/: data_utils.py  libpostal_download_data  parser.py  version.py
src/: pyparser.c  pyutils.c  pyutils.h
tests/: test_parser.py
wheelhouse/: libpypostal-1.1.0-cp38-cp38-macosx_11_0_arm64.whl
